-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0 Beta1
-
None
-
-
3
-
de5c25580 (dev), 3982f541c (6.9)
-
Foundation Sprint 123
On VxWorks local sockets are disabled, so the http server build fails:
/home/karim/Qt/6.9.0/Src/qthttpserver/src/httpserver/qhttpserverhttp1protocolhandler.cpp:14:10: fatal error: 'QtNetwork/qlocalsocket.h' file not found
14 | #include <QtNetwork/qlocalsocket.h>
Probably the http server build should be dependent on the localsocket feature.