Add missing include guards for localserver

Add missing include guards for localserver to make QtHttpServer compile
on VxWorks where localserver is disabled.

Fixes: QTBUG-132517
Pick-to: 6.9
Change-Id: Icc5ea506ebc2e34249d5ed6416080ad96814f332
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Lena Biliaieva <lena.biliaieva@qt.io>